<resources>
    <string name="app_name">ElegantUpgradeService</string>

    <string name="demo_info1">1.先安装WeiboV5.5（已通过云盘共享）</string>
    <string name="demo_info2">2.将由服务器端生成的差分文件 weibo.patch（V5.5->V5.6）拷贝至：/sdcard/weibo.patch（已通过云盘共享）</string>
    <string name="demo_info3">3.点击 Start</string>
    <string name="demo_start">Start</string>
    <string name="demo_github">GitHub</string>
</resources>
